// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component should be able to change the color 1`] = `
<Text
  style={
    Object {
      "color": "#000",
      "fontFamily": "Cairo-Regular",
      "fontSize": 16,
    }
  }
>
  Hello
</Text>
`;

exports[`Header Component should be able to change the font weight 1`] = `
<Text
  style={
    Object {
      "color": "#7C4908",
      "fontFamily": "Cairo-ExtraBold",
      "fontSize": 16,
    }
  }
>
  Hello
</Text>
`;

exports[`Header Component should have mutiple variant and change the size depend on the variant 1`] = `
<Text
  style={
    Object {
      "color": "#7C4908",
      "fontFamily": "Cairo-Bold",
      "fontSize": 30,
    }
  }
>
  Hello
</Text>
`;

exports[`Header Component should renders correctly with the default styles 1`] = `
<Text
  style={
    Object {
      "color": "#7C4908",
      "fontFamily": "Cairo-Regular",
      "fontSize": 16,
    }
  }
>
  Hello
</Text>
`;
